--- a/Clients/Views/Home/Index.cshtml
+++ b/Clients/Views/Home/Index.cshtml
@@ -1,148 +1,232 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@Scripts.Render("~/Scripts/jquery-3.3.1.min.js")
+@Scripts.Render("~/Scripts/semantic.min.js")
+@Scripts.Render("~/Content/dropdown.min.js")
+@Styles.Render("~/Content/semantic.css")
+@Styles.Render("~/Content/dropdown.min.css")
+<div class="mainForm"style="margin-top:6%">
 
+<div class="ui form">
+    <div class="required field">
+        <label>Фамилия</label>
+        <input type="text" placeholder="Фамилия">
+    </div>
+</div>
 
+    <div class="ui form">
+        <div class="required field">
+            <label>Полное имя</label>
+            <input type="text" placeholder="Полное имя">
+        </div>
+    </div>
 
-<table class="ui basic table" style="margin-top:6%">
-    <tbody>
-        <tr>
-            <td>Фамилия</td>
-            <th><input class="text"></th>
-        </tr>
-        <tr>
-            <td>Имя</td>
-            <th><input class="text"></th>
-        </tr>
-        <tr>
-            <td>Отчество</td>
-            <th><input class="text"></th>
-        </tr>
-        <tr>
-            <td>Дата Рождения</td>
-            <th><input class="date"></th>
-        </tr>
-        <tr>
-            <td>Пол</td>
-            <th>
-                <div class="ui form">
-                    <div class="inline fields">
-                        <div class="field">
-                            <div class="ui radio checkbox">
-                                <input type="radio" name="frequency" checked="checked">
-                                <label>Мужской</label>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <div class="ui radio checkbox">
-                                <input type="radio" name="frequency">
-                                <label>Женский</label>
-                            </div>
-                        </div>
-                    </div>
+    <div class="ui form">
+        <div class="required field">
+            <label>Отчество</label>
+            <input type="text" placeholder="Отчество">
+        </div>
+    </div>
+    <div class="ui form">
+        <div class="required field">
+            <label>Дата Рождения</label>
+            <input type="text" placeholder="Дата Рождения">
+        </div>
+    </div>
+    
+    <div class="ui form">
+        <div class="required grouped fields">
+            <label>Пол</label>
+            <div class="field">
+                <div class="ui slider checkbox">
+                    <input type="radio" name="throughput" checked="checked">
+                    <label>Мужской</label>
                 </div>
-            </th>
-        </tr>
+            </div>
+            <div class="field">
+                <div class="ui slider checkbox">
+                    <input type="radio" name="throughput">
+                    <label>Женский</label>
+                </div>
+            </div>
+        </div>
+    </div>
 
-        <tr>
-            <td>Серия паспорта</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Серия паспорта</label>
+            <input type="text" placeholder="Серия паспорта">
+        </div>
+    </div>
 
-        <tr>
-            <td>Идент. номер</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Идент. номер</label>
+            <input type="text" placeholder="Идент. номер">
+        </div>
+    </div>
 
-        <tr>
-            <td>№ паспорта</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>№ паспорта</label>
+            <input type="text" placeholder="№ паспорта">
+        </div>
+    </div>
+    
+    <div class="ui form">
+        <div class="required field">
+            <label>Кем выдан</label>
+            <input type="text" placeholder="Кем выдан">
+        </div>
+    </div>
+    
+    <div class="ui form">
+        <div class="required field">
+            <label>Дата выдачи</label>
+            <input type="text" placeholder="Дата выдачи">
+        </div>
+    </div>
+    
+    <div class="ui form">
+        <div class="required field">
+            <label>Место рождения</label>
+            <input type="text" placeholder="Место рождения">
+        </div>
+    </div>
 
-        <tr>
-            <td>Кем выдан</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Город факт. проживания</label>
+            <input type="text" placeholder="Город факт. проживания">
+        </div>
+    </div>
 
-        <tr>
-            <td>Дата выдачи</td>
-            <th><input class="date"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Адрес факт.проживания</label>
+            <input type="text" placeholder="Адрес факт.проживания">
+        </div>
+    </div>
 
-        <tr>
-            <td>Место рождения</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="field">
+            <label>Телефон домашний</label>
+            <input type="text" placeholder="Телефон домашний">
+        </div>
+    </div>
 
-        <tr>
-            <td>Город факт. проживания</td>
-            <th><input class="text"></th>
-        </tr>
-        <tr>
-            <td>Адрес факт.проживания</td>
-            <th><input class="text"></th>
-        </tr>
-        <tr>
-            <td>Телефон домашний</td>
-            <th><input class="text"></th>
-        </tr>
-        <tr>
-            <td>Телефон мобильный</td>
-            <th><input class="text"></th>
-        </tr>
-        <tr>
-            <td>E-mail</td>
-            <th><input class="text"></th>
-        </tr>
-        
-        <tr>
-            <td>Место работы</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="field">
+            <label>Телефон мобильный</label>
+            <input type="text" placeholder="Телефон мобильный">
+        </div>
+    </div>
 
-        <tr>
-            <td>Должность</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="field">
+            <label>E-mail</label>
+            <input type="text" placeholder="E-mail">
+        </div>
+    </div>
 
-        <tr>
-            <td>Город прописки</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="field">
+            <label>Место работы</label>
+            <input type="text" placeholder="Место работы">
+        </div>
+    </div>
 
-        <tr>
-            <td>Адрес прописки</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="field">
+            <label>Должность</label>
+            <input type="text" placeholder="Должность">
+        </div>
+    </div>
 
-        <tr>
-            <td>Семейное положение</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Город прописки</label>
+            <input type="text" placeholder="Город прописки">
+        </div>
+    </div>
 
-        <tr>
-            <td>Гражданство</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Адрес прописки</label>
+            <input type="text" placeholder="Адрес прописки">
+        </div>
+    </div>
 
-        <tr>
-            <td>Инвалидность</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Семейное положение</label>
+            <input type="text" placeholder="Семейное положение">
+        </div>
+    </div>
 
-        <tr>
-            <td>Пенсионер</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Гражданство</label>
+            <input type="text" placeholder="Гражданство">
+        </div>
+    </div>
 
-        <tr>
-            <td>Ежемесячный доход</td>
-            <th><input class="text"></th>
-        </tr>
+    <div class="ui form">
+        <div class="required field">
+            <label>Инвалидность</label>
+            <input type="text" placeholder="Инвалидность">
+        </div>
+    </div>
 
-        <tr>
-            <td>Военнообязанный</td>
-            <th><input class="text"></th>
-        </tr>
-    </tbody>
-</table>
+    <div class="ui form">
+        <div class="required field">
+            <div class="ui checkbox">
+                <input type="checkbox">
+                <label>Пенсионер</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui form">
+        <div class="field">
+            <label>Ежемесячный доход</label>
+            <input type="text" placeholder="Ежемесячный доход">
+        </div>
+    </div>
+    
+    <div class="ui form">
+        <div class="required field">
+            <div class="ui checkbox">
+                <input type="checkbox">
+                <label>Военнообязанный</label>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<div class="ui dropdown ">
+    <div class="text"></div>
+    <i class="dropdown icon"></i>
+</div>
+
+    <script>
+        $('.ui.dropdown').dropdown({
+            values: [
+                {
+                    name: 'adfafa',
+                    value: 'male'
+                },
+                {
+                    name: 'Female',
+                    value: 'female',
+                    selected: true
+                }
+            ]
+            
+        });
+
+
+        $('.ui.checkbox').checkbox();
+    </script>
